--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "deploy": "vite build && gh-pages -d dist",
+    "test": "tsc src/services/services.test.ts --module commonjs --moduleResolution node --target ES2020 --esModuleInterop --outDir .tmp && node --test .tmp/services/services.test.js"
   },
   "dependencies": {
     "react": "^18.3.1",
