--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "voice-router",
   "private": true,
   "version": "0.0.0",
+  "main": "expo/AppEntry.js",
   "type": "module",
   "scripts": {
     "dev": "expo start",
