--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "expo": "^51.0.0",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "^0.74.0",
     "react-native-web": "^0.19.8"
   },
