--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "expo": "^51.0.0",
+    "expo-av": "^14.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.74.0",
